# phoebesnotebook

./: .flake8  .gitignore  Automating a Flask application deployment using Ansible, Gunicorn and Nginx.md  Makefile  README.md  app.py  deployment ansible.txt  deployment.txt  pyproject.toml  remember.txt  requirements.txt  todo.txt
config/: config.yml
deploy/: hosts  mySiteBlockConfiguration  mysite  mysite.service  nginx.conf  phoebesnotebook.service  playbook.yml
models/: Page.py  Post.py  Site.py  models.py
phoebesnotebook/: app.py
phoebesnotebook/models/: __init__.py  page.py  post.py  site.py
phoebesnotebook/static/css/: main.css  main.css.map
phoebesnotebook/templates/: default.html  head.html  index.html  post.html  scripts.html  sidebar.html
phoebesnotebook/views/: __init__.py  index.py  post.py  tagged.py
posts/: automating-deployments-with-ansible.md  automating-deployments-with-ansible.yml  plotting-waveforms-with-matplotlib.md  plotting-waveforms-with-matplotlib.yml
scss/: _vars.scss  main.scss
static/css/: code_highlighter.css  main.css  main.css.map
templates/: default.html  head.html  index.html  post.html  scripts.html  search.html  sidebar.html
views/: index.py  post.py  tagged.py
